correct file sorting and lst file indexing